// Interface exported by the server
syntax = "proto3";
package rpc;

service Api {
    rpc Version(VersionRequest) returns (VersionReply){}
    rpc Admins(AdminsRequest) returns (AdminsReply){}
    rpc Cluster(ClusterRequest) returns (ClusterReply){}
    rpc Routes(RoutesRequest) returns (RoutesReply){}
    rpc Status(StatusRequest) returns (StatusReply){}
    rpc Broker(BrokerRequest) returns (BrokerReply){}
    rpc Plugins(PluginsRequest) returns (PluginsReply){}
    rpc Services(ServicesRequest) returns (ServicesReply){}
    rpc Subscriptions(SubscriptionsRequest) returns (SubscriptionsReply){}
    rpc Clients(ClientsRequest) returns (ClientsReply) {}
    rpc Sessions(SessionsRequest) returns (SessionsReply){}
    rpc Topics(TopicsRequest) returns (TopicsReply){}
}

// Version
message VersionRequest { }
message VersionReply{
    string Version  = 1;
}
// Broker
message BrokerRequest{
    string Category = 1;
    string Service = 2;
}
message BrokerReply{
    ReplyMessageHeader Header = 1;
    map<string, uint64> Stats = 2; 
    map<string, uint64> Metrics = 3;
}
// Clients
message ClientsRequest{
    string Category = 1;
    string Service = 2;
    string ClientId = 3;
}
message ClientsReply{
    ReplyMessageHeader Header = 1;
    repeated ClientInfo Clients =2;
}

message ClientInfo {
    string UserName = 1;
    bool CleanSession = 2;
    string PeerName = 3;
    string ConnectTime = 4;
}



message AdminsRequest{}
message AdminsReply{}
message ClusterRequest{}
message ClusterReply{}
// Routes
message RoutesRequest{
    string Category = 1;
    string Service = 2;  // mqtt or coap
    string Topic = 3;
}
message RoutesReply{
    ReplyMessageHeader Header = 1;
    repeated RouteInfo Routes  = 2;
}

message RouteInfo {
    string Topic = 1;
    repeated string Route =2;
}

// Status
message StatusRequest{ }
message StatusReply {
    ReplyMessageHeader Header = 1;
}
message PluginsRequest{}
message PluginsReply{}

// Service
message ServicesRequest{
    string Category = 1;
    string ServiceName = 2;
    string Listen = 3;
}
message ServicesReply {
    ReplyMessageHeader Header = 1;
    repeated ServiceInfo Services = 2;
}

message ServiceInfo {
    string ServiceName = 1;
    string Listen = 2;
    uint64 Acceptors = 3;
    uint64 MaxClients = 4;
    uint64 CurrentClients = 5;
    uint64 ShutdownCount = 6;
}

// Subscription
message SubscriptionsRequest{
    string Service = 1;
    string Category = 2;
    string Subscription = 3;
}
message SubscriptionsReply{
    ReplyMessageHeader Header = 1;
    repeated SubscriptionInfo Subscriptions = 2;
}

message SubscriptionInfo {
    string ClientId = 1;
    string Topic = 2;
    string Attribute = 3;
}

// Session
message SessionsRequest{
    string Category = 1;
    string Service = 2;
    string ClientId = 3;
    map<string, bool> Conditions  = 4;
}
message SessionsReply{
    ReplyMessageHeader Header = 1;
    repeated SessionInfo  Sessions = 2;
}

message SessionInfo {
    string ClientId           = 1;
	bool CleanSession       = 2;
	uint64 MessageMaxInflight = 3; 
	uint64 MessageInflight    = 4; 
	uint64 MessageInQueue     = 5; 
	uint64 MessageDropped     = 6; 
	uint64 AwaitingRel        = 7;
	uint64 AwaitingComp       = 8; 
	uint64 AwaitingAck        = 9; 
	string CreatedAt          = 10; 
}

// Topic
message TopicsRequest{
    string Service = 1;
    string Category = 2;
    string Topic = 3;
}
message TopicsReply{
    ReplyMessageHeader Header = 1;
    repeated TopicInfo Topics = 2;
}

message TopicInfo {
    string Topic = 1;
    string Attribute = 2;
}

// Message Header
message ReplyMessageHeader {
    bool Success = 1;
    string Reason = 2;
}
